@@ -33,7 +33,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Task-Curses-UI
-  homepage: https://github.com/tupinek/Task-Curses-UI
+  homepage: https://github.com/michal-josef-spacek/Task-Curses-UI
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Task-Curses-UI
+  repository: git://github.com/michal-josef-spacek/Task-Curses-UI
 version: '0.04'
