@@ -28,8 +28,8 @@ requires 'Curses::UI::Volume' => 0.02;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Task-Curses-UI';
-resources 'homepage' => 'https://github.com/tupinek/Task-Curses-UI';
-resources 'repository' => 'git://github.com/tupinek/Task-Curses-UI';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Task-Curses-UI';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Task-Curses-UI';
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
