@@ -123,7 +123,7 @@ SEE ALSO
         Create and manipulate Window widgets
 
 REPOSITORY
-    <https://github.com/tupinek/Task-Curses-UI>
+    <https://github.com/michal-josef-spacek/Task-Curses-UI>
 
 AUTHOR
     Michal Špaček <mailto:skim@cpan.org>
